tdf#101812 Opening template manager switches to templates view in start center

Change-Id: If80957bcebebe6c64237cd446465a3d6cc72bc18